deploy/k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sap-actions-controller
  labels:
    name: sap-actions-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sap-actions-controller-deploy
  namespace: sap-actions-controller
  labels:
    app: sap-actions-controller
spec:
  selector:
    matchLabels:
      app: sap-actions-controller
  template:
    metadata:
      labels:
        app: sap-actions-controller
    spec:
      enableServiceLinks: False
      containers:
        - name: sap-actions-controller
          image: metalstack/sap-actions-controller:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
      volumeMounts:
        - name: secrets
          mountPath: /etc/sap-actions-controller/certs/
          readOnly: true
        - name: config
          mountPath: /etc/sap-actions-controller
          readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: sap-actions-controller
        - name: config
          configMap:
            name: sap-actions-controller
---
apiVersion: v1
kind: Service
metadata:
  name: sap-actions-controller
  namespace: sap-actions-controller
  labels:
    app: sap-actions-controller
spec:
  selector:
    app: sap-actions-controller
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: sap-actions-controller
  labels:
    app: sap-actions-controller
spec:
  rules:
    - host: bot.metal-pod.dev
      http:
        paths:
          - backend:
              serviceName: sap-actions-controller
              servicePort: 3000
  tls:
    - hosts:
        - bot.metal-pod.dev
      secretName: sap-actions-controller-ingress-tls
